--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
           
         
         <li>
-          <a href="/files/CurriculumVitae_minami_2018.pdf" >
+          <a href="/files/MyCV.pdf" >
             <i class="ai ai-cv big-icon"></i>
           </a>
         </li>
